# gameorganize

./: .gitignore  README.md  app.py  game.py  gamelist.py  importer.py  pyproject.toml
.github/workflows/: run_test.yml
gameorganize/: __init__.py  app.py  application.py  auth.py  config.py  db.py  game.py  gamelist.py  importer.py  platform.py  platforms.py  user.py
gameorganize/forms/: game.py
gameorganize/importers/: backloggery.py  generic.py  retroachievements.py  steam.py
gameorganize/migrations/: env.py
gameorganize/migrations/versions/: 8a29fa552c51_strictly_reqire_game_entry_platform_.py  be7281a4ac73_fix_platform_row_deletion_foreign_key_.py  dc376f5f12cc_add_platforms_table.py
gameorganize/model/: game.py  goal.py  platform.py  user.py
gameorganize/static/: datatables.min.css  style.css
gameorganize/templates/: 404.html  base.html  header.html  home.html
gameorganize/templates/auth/: login.html  signup.html
gameorganize/templates/game/: add.html  detail.html
importers/: backloggery.py  retroachievements.py  steam.py
model/: game.py
src/gameorganize/: app.py  games.sqlite3
templates/game/: add.html  detail.html
templates/gamelist/: detail.html  filter.html  stats.html
templates/list/: stats.html
tests/: conftest.py  flask_setup.py  test_auth.py  test_backloggery.py  test_game.py  test_retroachievements.py  test_steam.py
tests/data/: backloggery-history.csv  backloggery-library.csv  backloggery-multitap.csv  backloggery-reviews.csv  generic-csv.csv  steam-cheev1.json  steam-cheev2.json  steam-cheev3.json
(+39 files in other folders)
