[project]
name = "gameorganize"
description = "A simple, functional, self-hosted game collection tracker."
version = "1.0.0"
dependencies = [
    "pytest", 
    "coverage",
    "flask", 
    "requests",
    "typing_extensions",
    "flask_sqlalchemy",
    "flask_migrate",
    "flask_login",
    "flask_wtf",
]
requires-python = ">= 3.8"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "gameorganize"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.ruff]
src = ["src"]
